--- a/src/views/Leaderboard/leaderboard.module.scss
+++ b/src/views/Leaderboard/leaderboard.module.scss
@@ -490,7 +490,7 @@
 
 .otherStandingAvatar {
     height: 57.5px;
-    // width: 50px;
+    width: 50px;
     margin: 6.25px 10px;
 
     @media only screen and (max-width: 850px) {
