--- a/src/views/AuctionHouse/auctionHouse.module.scss
+++ b/src/views/AuctionHouse/auctionHouse.module.scss
@@ -41,132 +41,6 @@
     }
 }
 
-.auction {
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    align-items: center;
-    width: 500px;
-    height: 150px;
-    padding: 10px 0;
-    background: var(--background-color);
-    border-radius: 7px;
-    padding-bottom: 15px;
-    box-shadow: inset 0 -7px rgba(0, 0, 0, .2);
-    transition: background-color .2s;
-    cursor: pointer;
-
-    @media (max-width: 768px) {
-        width: 95%;
-        padding: 5px 0;
-        padding-bottom: 10px;
-    }
-
-    &:hover {
-        background: var(--secondary-color);
-    }
-}
-
-.auctionImageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-right: 15px;
-    padding-left: 10px;
-    width: 120px;
-    height: 110px;
-
-    @media (max-width: 768px) {
-        padding-left: 5px;
-        padding-right: 10px;
-        width: 110px;
-        height: 90px;
-    }
-
-    &>img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-    &>video {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-}
-
-.auctionUsesLeft {
-    margin-top: 10px;
-    font-size: 1rem;
-    font-weight: 700;
-}
-
-.auctionInfo {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.2rem;
-    gap: 5px;
-    font-weight: 700;
-    line-height: 22px;
-
-    @media (max-width: 768px) {
-        margin-top: 10px;
-        font-size: 0.9rem;
-    }
-
-    &>div>span {
-        font-weight: 400;
-    }
-}
-
-.auctionPrice {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    gap: 5px;
-
-    &>img {
-        width: 20px;
-        height: 20px;
-        object-fit: contain;
-    }
-}
-
-.auctionBadge {
-    top: 5px;
-    position: absolute;
-    right: 5px;
-    padding: 5px;
-    background: rgba(0, 0, 0, .15);
-    border-radius: 7px;
-    user-select: none;
-    font-weight: 700;
-
-    @media (max-width: 768px) {
-        font-size: 0.7rem;
-    }
-}
-
-.auctionTime {
-    position: absolute;
-    bottom: 12px;
-    right: 5px;
-    padding: 5px;
-    opacity: .5;
-    user-select: none;
-
-    @media (max-width: 768px) {
-        font-size: 0.7rem;
-    }
-
-    &>i {
-        margin-left: 2px;
-    }
-}
-
 .tokenPrice {
     height: 25px;
     margin: 0 6px;
@@ -192,7 +66,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 95%;
+    width: 94%;
     min-height: 50px;
     max-height: 50px;
     padding: 10px;
@@ -201,6 +75,10 @@
     box-shadow: inset 0 -7px rgba(0, 0, 0, .2);
     transition: background-color .2s;
     cursor: pointer;
+
+    &[data-top-bidder="true"] {
+        outline: gold 3px solid;
+    }
 
     @media (max-width: 768px) {
         height: 40px;
