--- a/src/views/Dashboard/components/CosmeticsModal/cosmeticsModal.module.scss
+++ b/src/views/Dashboard/components/CosmeticsModal/cosmeticsModal.module.scss
@@ -84,3 +84,10 @@
         transform: scale(0.9);
     }
 }
+
+.colorCategoryHolder {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
