--- a/src/views/Credits/credits.module.scss
+++ b/src/views/Credits/credits.module.scss
@@ -5,10 +5,10 @@
     margin: 20px 5% 10px;
     flex-wrap: wrap;
     gap: 10px;
+    padding-bottom: 20px;
 
     @media screen and (max-width: 768px) {
         flex-direction: column;
-        padding-bottom: 20px;
     }
 }
 
@@ -83,4 +83,20 @@
     max-width: 300px;
     height: 100%;
     mask-image: linear-gradient(180deg, #000 40%, transparent);
+}
+
+.creditModalAvatarContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin-right: 5px;
+    user-select: none;
+}
+
+.creditModalAvatar {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
