forms finished, trading plaza and map editor being worked on, fixed a lot of small issues and bugs
Co-authored-by: zastix <zastlx@users.noreply.github.com>

--- a/src/components/Toggle/toggle.module.scss
+++ b/src/components/Toggle/toggle.module.scss
@@ -8,6 +8,8 @@
 .toggleContainer {
     width: 25px;
     height: 25px;
+    min-width: 25px;
+    min-height: 25px;
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--accent-color);
