--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -240,6 +240,7 @@
     font-family: "Titan One", sans-serif;
     box-shadow: inset 0 -2.5px rgba(0, 0, 0, .2);
     -webkit-text-stroke: 1.2px #000000;
+    text-shadow: 0px 0px 2px #000000;
     font-size: 20px;
 
     &>div {
