--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -99,7 +99,7 @@
     }
 }
 
-.userAvatar {
+.userAvatarContainer {
     height: 11vh;
     // max-width: 10vh;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -117,6 +117,14 @@
 
     &:active {
         transform: scale(0.9);
+    }
+}
+
+.userAvatar {
+    height: 11vh;
+
+    @media screen and (max-width: 475px) {
+        height: 110px;
     }
 }
 
@@ -270,6 +278,8 @@
 .username {
     height: 50%;
     font-size: 2.5vh;
+    text-align: center;
+    width: 270px;
 
     @media screen and (max-width: 475px) {
         font-size: 1.4rem;
