--- a/src/views/TradingPlaza/tradingPlaza.module.scss
+++ b/src/views/TradingPlaza/tradingPlaza.module.scss
@@ -2,10 +2,6 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-
-    @media (max-width: 768px) {
-        height: calc(100% + 55px);
-    }
 }
 
 .canvas {
@@ -25,11 +21,10 @@
     z-index: 1;
 }
 
-.latency {
+.topLeft {
     position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    top: 5px;
+    left: 7px;
     color: var(--accent-color);
     z-index: 2;
     user-select: none;
