--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -836,6 +836,7 @@
     padding: 15px;
     height: 450px;
     max-height: 450px;
+    width: 400px;
     overflow-y: auto;
     overflow-x: hidden;
 }
