--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -49,11 +49,14 @@
     position: absolute;
     left: 0;
     top: 0;
-    background-size: 50px 50px;
-    opacity: .15;
     width: 100%;
     height: 100%;
-    // background-image: url(window.constructCDNUrl("/content/blookTile.png"));
+    opacity: .15;
+}
+
+.setTopCanvas {
+    width: 100%;
+    height: 100%;
 }
 
 .setTopText {
