--- a/src/components/WarningContainer/warningContainer.module.scss
+++ b/src/components/WarningContainer/warningContainer.module.scss
@@ -1,6 +1,6 @@
-.errorContainer {
+.warningContainer {
     align-items: center;
-    border: 2px solid #ce1313;
+    border: 2px solid #ffff00;
     border-radius: 6px;
     display: flex;
     flex-direction: row;
@@ -9,7 +9,7 @@
     width: 80%;
 
     &>i {
-        color: #ce1313;
+        color: #ffff00;
         margin-left: 13px;
         margin-right: 13px;
         min-width: 20px;
