--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -593,3 +593,15 @@
         }
     }
 }
+
+.openPackIcon {
+    width: 400px;
+    position: absolute;
+    bottom: -20px;
+    right: -20px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    opacity: .2;
+    transform: rotate(-35deg);
+}
