--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -103,7 +103,6 @@
     height: 11vh;
     // max-width: 10vh;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    cursor: pointer;
     transition: transform 0.2s;
 
     @media screen and (max-width: 475px) {
@@ -111,12 +110,16 @@
         // max-width: 100px;
     }
 
-    &:hover {
-        transform: scale(0.95);
-    }
+    &[data-hoverable="true"] {
+        cursor: pointer;
 
-    &:active {
-        transform: scale(0.9);
+        &:hover {
+            transform: scale(0.95);
+        }
+
+        &:active {
+            transform: scale(0.9);
+        }
     }
 }
 
