legal mobile support and header is now fixed

--- a/src/components/HeaderBody/headerBody.module.scss
+++ b/src/components/HeaderBody/headerBody.module.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: calc(100% - 55px);
     z-index: -1;
+    top: 55px;
     /* left: 0;
     margin: 0;
     padding: 0;
