--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -5,14 +5,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* left: 0;
-    overflow: hidden;
-    padding-bottom: 6px;
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
-    z-index: 10; */
     height: 55px;
+    z-index: 10;
 }
 
 .headerLeft {
