--- a/src/all.scss
+++ b/src/all.scss
@@ -10,6 +10,7 @@
     --background-color: #2f2f2f;
     --primary-color: #1f1f1f;
     --secondary-color: #3f3f3f;
+    --tertiary-color: #0f0f0f;
     --accent-color: #ffffff;
 }
 
