--- a/src/views/Error/error.module.scss
+++ b/src/views/Error/error.module.scss
@@ -6,7 +6,7 @@
     text-align: center;
     position: absolute;
     width: 100%;
-    height: calc(100% - 55px);
+    height: 100%;
 }
 
 .container {
