--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -30,8 +30,9 @@
 }
 
 .leftSide {
-    margin: 0 0 35px 1%;
+    margin: 0 0 0 1%;
     width: calc(95.5% - 260px);
+    padding-bottom: 15px;
 
     @media screen and (max-width: 1010px) {
         width: 100%;
@@ -199,7 +200,31 @@
     transform: translate(-50%, -50%) rotate(10deg);
 }
 
-.packBottom {
+.packRatesIcon {
+    margin-right: 10px;
+    cursor: pointer;
+    transition: filter .2s;
+
+    &:hover {
+        filter: brightness(0.5);
+    }
+}
+
+.itemShopContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 5px;
+    gap: 15px;
+
+    @media only screen and (max-width: 1010px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.bottomLeftText {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -222,14 +247,82 @@
     }
 }
 
-.packRatesIcon {
-    margin-right: 10px;
+.bottomRightText {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 24px;
+    padding: 0 12px;
+    background-color: rgba(0, 0, 0, .2);
+    font-weight: 700;
+    font-size: 18px;
+    color: var(--accent-color);
+    border-radius: 10px 0 0 10px;
+    position: absolute;
+    bottom: 12px;
+    right: 0;
+
+    &>img {
+        width: 16px;
+        height: 16px;
+        margin-right: 7px;
+    }
+}
+
+.itemContainer {
+    width: 270px;
+    height: 190px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    outline: none;
     cursor: pointer;
-    transition: filter .2s;
+    position: relative;
+    background: linear-gradient(var(--primary-color), var(--tertiary-color));
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: inset 0 -7px #0003;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: .2s;
 
     &:hover {
-        filter: brightness(0.5);
+        transform: scale(0.95);
     }
+
+    &:active {
+        transform: scale(0.9);
+    }
+}
+
+.itemName {
+    font-family: "Titan One", sans-serif;
+    font-size: 22px;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 10px;
+    color: var(--accent-color);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, .5);
+}
+
+.itemImage {
+    width: 100%;
+    height: 50%;
+    object-fit: contain;
+}
+
+.itemText {
+    font-size: 28px;
+    padding: 5px 10px;
+    background-color: rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    font-family: "Titan One", sans-serif;
+    color: var(--accent-color);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, .5);
 }
 
 .tokenPrice {
@@ -340,7 +433,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 0;
     filter: brightness(1.5);
 }
 
@@ -604,4 +697,11 @@
     user-select: none;
     opacity: .2;
     transform: rotate(-35deg);
+    z-index: -1;
+
+    @media only screen and (max-width: 650px) {
+        width: 200px;
+        bottom: -15px;
+        right: -15px;
+    }
 }
