--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -312,14 +312,15 @@
     }
 
     &>div {
-        width: auto;
-        height: 3vh;
+        width: 4vh;
+        height: 4vh;
         padding: 0.75vh;
         box-shadow: inset 0 -0.5vh rgba(0, 0, 0, 0.2);
         background-color: var(--primary-color);
         border-radius: 0.7vh;
         display: flex;
         align-items: center;
+        justify-content: center;
 
         @media screen and (max-width: 475px) {
             height: 30px;
@@ -329,9 +330,10 @@
         }
 
         &>img {
-            width: auto;
+            width: 95%;
             height: 100%;
             margin-bottom: 0.5vh;
+            object-fit: contain;
 
             @media screen and (max-width: 475px) {
                 margin-bottom: 5px;
@@ -339,9 +341,10 @@
         }
 
         &>video {
-            width: auto;
+            width: 95%;
             height: 100%;
             margin-bottom: 0.5vh;
+            object-fit: contain;
 
             @media screen and (max-width: 475px) {
                 margin-bottom: 5px;
