--- a/src/views/Chat/chat.module.scss
+++ b/src/views/Chat/chat.module.scss
@@ -421,20 +421,22 @@
 
 .typingListContainer {
     display: flex;
-    width: 98%;
+    min-width: 300px;
     background: var(--primary-color);
     gap: 5px;
     flex-direction: column;
     justify-content: start;
+    position: absolute;
+    bottom: 75px;
+    border-radius: 5px;
     z-index: 1;
 }
 
 .typingListItem {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 8px;
-    width: 100%;
-    height: 20px;
     cursor: pointer;
     padding: 5px;
     border-radius: 5px;
@@ -449,16 +451,18 @@
 }
 
 .typingListItemImage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20px;
-    height: 20px;
 
     &>img {
-        height: 100%;
+        height: 20px;
         object-fit: contain;
     }
 
     &>video {
-        height: 100%;
+        height: 20px;
         object-fit: contain;
     }
 }
@@ -480,4 +484,35 @@
         left: 0;
         display: none;
     }
+}
+
+.editingMessageInput {
+    padding: 2px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.3);
+    outline: none;
+}
+
+.editingMessageText {
+    font-size: 15px;
+}
+
+.editingMessageSaveText {
+    color: lightgreen;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.editingMessageCancelText {
+    color: red;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.edited {
+    opacity: 0.5;
+    font-size: 15px;
+    pointer-events: none;
+    user-select: none;
+    margin-left: 5px;
 }
