--- a/src/views/TradingPlaza/tradingPlaza.module.scss
+++ b/src/views/TradingPlaza/tradingPlaza.module.scss
@@ -30,3 +30,13 @@
     user-select: none;
     pointer-events: none;
 }
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: overlay;
+    opacity: 0.2;
+}
