--- a/src/views/AuctionHouse/auctionHouse.module.scss
+++ b/src/views/AuctionHouse/auctionHouse.module.scss
@@ -22,22 +22,33 @@
     box-shadow: inset 0 -9px rgba(0, 0, 0, .2), 0 5px rgba(0, 0, 0, .25);
 }
 
+.auctionHouseItemsContainer {
+    display: block;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 95%;
+    margin-top: 1%;
+    width: 99%;
+
+    @media screen and (max-width: 768px) {
+        height: 95%;
+        margin-top: 2%;
+        width: 98%;
+    }
+}
+
 .auctionHouseItems {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
-    overflow-y: auto;
     margin-top: 1%;
-    height: 95%;
-    width: 98%;
     margin-left: 1%;
 
     @media screen and (max-width: 768px) {
-        width: 98%;
-        margin-top: 2%;
-        height: 95%;
+        justify-content: center;
     }
 }
 
@@ -91,6 +102,34 @@
 }
 
 .noAuctions {
-    font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    font-size: 40px;
     font-weight: 700;
+
+    @media (max-width: 768px) {
+        font-size: 25px;
+    }
+}
+
+.noAuctionsImage {
+    width: 20%;
+    height: auto;
+    margin-bottom: 20px;
+
+    @media (max-width: 768px) {
+        width: 60%;
+    }
+}
+
+.auctionLoaderContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
