--- a/src/views/Chat/chat.module.scss
+++ b/src/views/Chat/chat.module.scss
@@ -225,15 +225,16 @@
     // width: calc(100% - 200px);
     width: 100%;
     display: flex;
-    gap: 1rem;
-    flex-direction: column;
+    gap: 5px;
+    flex-direction: row;
     background: var(--primary-color);
     padding: 10px;
     bottom: 0;
     // border-radius: 6px 6px 0px 0px
 
     @media (max-width: 768px) {
-        width: calc(100% - 20px);
+        // width: calc(100% - 20px);
+        height: 45px;
     }
 }
 
@@ -259,6 +260,8 @@
     word-wrap: break-word;
     padding-top: 7.5px;
     padding-bottom: 7.5px;
+    background: var(--primary-color);
+    resize: none;
 }
 
 .messageInputPlaceholder {
@@ -273,7 +276,7 @@
 
 .usersTypingContainer {
     position: absolute;
-    z-index: 0;
+    z-index: -1;
     bottom: 99%;
     right: 2.5rem;
     padding: 0.4rem 0.8rem 0.7rem 0.8rem;
@@ -321,22 +324,46 @@
     }
 }
 
-.messageSend {
-    aspect-ratio: 1 / 1;
+.inputButtonsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    height: 42px;
+    width: fit-content;
+    margin-right: 20px;
+
+    @media (max-width: 768px) {
+        height: 100%;
+    }
+}
+
+.inputButton {
     border: none;
-    height: 30px;
     margin-block: auto;
-    color: #fff;
-    background: var(--primary-color);
-    border-radius: 3px;
+    color: var(--accent-color);
+    background: var(--secondary-color);
+    border-radius: 5px;
     transition: 0.2s;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    width: 42px;
+    height: 100%;
+    font-size: 15px;
+
+    @media (max-width: 768px) {
+        width: 45px;
+        font-size: 20px;
+    }
 
     &:hover {
-        filter: brightness(1.2);
+        filter: brightness(1.4);
+    }
+
+    &:active {
+        filter: brightness(1.1);
     }
 }
 
