--- a/src/views/Store/store.module.scss
+++ b/src/views/Store/store.module.scss
@@ -162,22 +162,23 @@
 
         & > .shine {
             filter: blur(5px);
+            pointer-events: none;
             --shineSpeed: 3s;
 
             &:nth-child(3) {
                 background: rgba(255, 255, 255, 0.25);
-                animation: shine var(--shineSpeed) ease infinite;   
+                animation: shine var(--shineSpeed) ease infinite;
                 width: 80px;
             }
 
             &:nth-child(4) {
                 background: rgba(255, 255, 255, 0.2);
-                animation: shine var(--shineSpeed) ease 0.085s infinite;   
+                animation: shine var(--shineSpeed) ease 0.085s infinite;
                 width: 70px;
             }
             &:nth-child(5) {
                 background: rgba(255, 255, 255, 0.15);
-                animation: shine var(--shineSpeed) ease 0.175s infinite;   
+                animation: shine var(--shineSpeed) ease 0.175s infinite;
                 width: 50px;
             }
         }
@@ -196,6 +197,7 @@
         z-index: 1;
         opacity: 0;
         box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+        pointer-events: none;
     }
 }
 
@@ -224,6 +226,7 @@
     // background-color: rgba(0, 0, 0, 0.2);
     filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.7));
     border-radius: 10px;
+    user-select: none;
 }
 
 .productText {
@@ -231,21 +234,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-shadow: 0 0 10px rgba(0, 0, 0, .7);
     gap: 5px;
+    user-select: none;
 }
 
 .productTitle {
-    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
     font-family: "Titan One", sans-serif;
+    user-select: none;
 }
 
 .productPrice {
     font-size: 1.25rem;
     font-weight: 700;
     margin-top: -5px;
+    user-select: none;
 }
 
 .productSubPrice {
     font-size: 0.75rem;
     opacity: 0.5;
+    user-select: none;
 }
