--- a/src/components/Modals/ModalButtonContainer/modalButtonContainer.module.scss
+++ b/src/components/Modals/ModalButtonContainer/modalButtonContainer.module.scss
@@ -14,5 +14,8 @@
 }
 
 .loader {
+    width: 35px !important;
+    height: 35px !important;
+    margin-top: 5px !important;
     transform: unset !important;
 }
