--- a/src/components/Blook/blook.module.scss
+++ b/src/components/Blook/blook.module.scss
@@ -69,8 +69,36 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
 
-    &[data-shiny="true"] {
-        // filter: hue-rotate(125deg);
+.customIndicatorContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+    z-index: 1;
+}
+
+.customIndicator {
+    position: absolute;
+    bottom: -.5vh;
+    left: -.5vh;
+    width: 2.5vh;
+    height: 2.5vh;
+    background: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &>span {
+        position: absolute;
+        bottom: .3vh;
+        font-size: 2vh;
+        color: black;
+        font-family: "Titan One", sans-serif;
     }
 }
