--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -65,6 +65,7 @@
     color: var(--accent-color);
     text-shadow: 3px 3px rgba(0, 0, 0, .2);
     font-size: 26px;
+    z-index: 1;
 }
 
 .setTopDivider {
@@ -135,26 +136,6 @@
         transform: scale(0.9);
     }
 
-    &>img {
-        height: 65px;
-        object-fit: contain;
-        -o-object-fit: contain;
-
-        &[data-locked="true"] {
-            filter: brightness(0);
-        }
-    }
-
-    &>video {
-        height: 65px;
-        object-fit: contain;
-        -o-object-fit: contain;
-
-        &[data-locked="true"] {
-            filter: brightness(0);
-        }
-    }
-
     &[data-locked="true"] {
         cursor: unset;
 
@@ -165,6 +146,16 @@
         &:active {
             transform: scale(1);
         }
+    }
+}
+
+.blookImage {
+    height: 65px;
+    object-fit: contain;
+    -o-object-fit: contain;
+
+    &[data-locked="true"] {
+        filter: brightness(0);
     }
 }
 
@@ -306,6 +297,7 @@
         text-shadow: 0 3px 3px rgba(0, 0, 0, .2);
         width: 100%;
         height: 50px;
+        -webkit-text-stroke: #000000 1px;
 
         @media only screen and (max-width: 1000px) {
             height: 30px;
@@ -318,6 +310,7 @@
     }
 
     .rightBlookRarity {
+        text-shadow: 0 3px 3px rgba(0, 0, 0, .2);
         font-size: 30px;
         -webkit-text-stroke: #000000 1px;
 
@@ -386,6 +379,7 @@
         0% {
             transform: translateY(-5px);
         }
+
         100% {
             transform: translateY(5px);
         }
@@ -409,6 +403,7 @@
             0% {
                 transform: translateX(-50%) translateY(-5px);
             }
+
             100% {
                 transform: translateX(-50%) translateY(5px);
             }
@@ -569,4 +564,70 @@
     font-size: 20px;
     font-weight: 700;
     color: var(--accent-color);
+}
+
+.sellBlooksContainer {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.sellBlooks {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 5px solid var(--secondary-color);
+    margin: 20px;
+    border-radius: 7px;
+    flex-wrap: wrap;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.sellBlook {
+    width: 200px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+    background-color: rgba(0, 0, 0, .2);
+    padding: 10px;
+    border-radius: 7px;
+    margin: 10px;
+    cursor: pointer;
+    transition: background-color .2s;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, .4);
+    }
+
+    &[data-selected="true"] {
+        background-color: rgba(255, 255, 255, .4);
+    }
+}
+
+.sellBlookImageContainer {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sellBlookImage {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.sellBlookInformation {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    font-weight: 700;
 }
