--- a/src/views/TradingPlaza/tradingPlaza.module.scss
+++ b/src/views/TradingPlaza/tradingPlaza.module.scss
@@ -7,6 +7,7 @@
 .canvas {
     width: 100%;
     height: 100%;
+    outline: none;
 }
 
 .ui {
@@ -19,6 +20,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
+    pointer-events: none;
 }
 
 .topLeft {
