--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -590,7 +590,7 @@
 }
 
 .sellBlook {
-    width: 200px;
+    width: 250px;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -620,6 +620,7 @@
 }
 
 .sellBlookImage {
+    display: flex;
     width: 100%;
     height: 100%;
     object-fit: contain;
