--- a/src/views/Error/error.module.scss
+++ b/src/views/Error/error.module.scss
@@ -37,12 +37,30 @@
     }
 }
 
+.imageContainer {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 .image {
-    width: 450px;
+    width: 100%;
+    height: 450px;
+    padding: 20px 10px 0px 10px;
+    object-fit: contain;
 
     @media (max-width: 600px) {
-        width: 300px;
+        height: 300px;
     }
+}
+
+.imageOverlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 8px 8px var(--primary-color);
 }
 
 .bottom {
