--- a/src/views/Chat/chat.module.scss
+++ b/src/views/Chat/chat.module.scss
@@ -472,6 +472,16 @@
     padding: 5px;
     border-radius: 5px;
 
+    &>*img {
+        height: 20px;
+        object-fit: contain;
+    }
+
+    &>*video {
+        height: 20px;
+        object-fit: contain;
+    }
+
     &:hover {
         background-color: rgba(255, 255, 255, 0.1);
     }
