--- a/src/views/Landing/landing.module.scss
+++ b/src/views/Landing/landing.module.scss
@@ -7,6 +7,8 @@
     justify-content: space-between;
     // width: 100vw; why does this not work
     padding: 0.7rem 1.5rem 1rem 1.5rem;
+    height: 4.5rem;
+    box-sizing: border-box;
     background-color: var(--primary-color);
     box-shadow: inset 0 -0.3rem rgba(0, 0, 0, 0.2);
     user-select: none;
@@ -44,5 +46,62 @@
         &:hover {
             text-decoration: underline;
         }
+    }
+}
+
+.title {
+    font-size: 7rem;
+    font-weight: 100;
+    font-family: "Titan One", sans-serif;
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.subTitle {
+    font-family: "Nunito", sans-serif;
+    font-weight: 500;
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 0.5rem !important;
+}
+
+.holdTopLanding {
+    position: relative;
+    width: 100vw;
+    height: calc(100vh - 4.5rem);
+}
+
+.titleContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+
+    & > * {
+        margin: 0;
+    }
+}
+
+.blookTop {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
+    height: 15rem;
+    width: auto;
+
+    &:nth-child(2), &:nth-child(6) {
+        height: 22.5rem;
+        z-index: 1;
+    }
+
+    &:nth-child(3), &:nth-child(5) {
+        height: 25rem;
+        z-index: 2;
+    }
+
+    &:nth-child(4) {
+        height: 30rem;
+        z-index: 3;
     }
 }
