--- a/src/views/Staff/staff.module.scss
+++ b/src/views/Staff/staff.module.scss
@@ -4,3 +4,9 @@
     justify-content: flex-start;
     margin: -5px calc(5% - 12px);
 }
+
+.packSeel {
+    width: 200px;
+    object-fit: cover;
+    transform: skew(-20deg);
+}
