--- a/src/components/Blook/blook.module.scss
+++ b/src/components/Blook/blook.module.scss
@@ -3,40 +3,6 @@
     position: relative;
 }
 
-.sparkleContainer {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.sparkle {
-    position: absolute;
-    width: 20px;
-    filter: drop-shadow(0 0 5px #000);
-    user-select: none;
-    pointer-events: none;
-    transform: scale(0);
-    animation: sparkle 4s 1 cubic-bezier(.47, 1.64, .41, .8) forwards;
-    z-index: 5;
-}
-
-@keyframes sparkle {
-    0% {
-        transform: scale(0.1) rotate(0deg);
-        opacity: 0;
-    }
-
-    50% {
-        transform: scale(1) rotate(180deg);
-        opacity: 1;
-    }
-
-    100% {
-        transform: scale(0.1) rotate(360deg);
-        opacity: 0;
-    }
-}
-
 .overlay {
     position: absolute;
     top: 0;
@@ -62,6 +28,43 @@
 
         100% {
             background-position: 0% 0%;
+        }
+    }
+}
+
+.shimmerOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    mask-size: 100% 100%;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -200%;
+        width: 30%;
+        height: 100%;
+        background: white;
+        animation: shimmer 3s linear infinite;
+        transform: skewX(-45deg);
+        filter: blur(3px);
+
+        @keyframes shimmer {
+            0% {
+                left: -200%;
+            }
+
+            33% {
+                left: 200%;
+            }
+
+            100% {
+                left: 200%;
+            }
         }
     }
 }
