--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -228,7 +228,7 @@
 .notificationIndicator {
     position: absolute;
     right: 7px;
-    border-radius: 5px;
+    border-radius: 7px;
     width: 25px;
     height: 25px;
     background-color: #ff4e4e;
@@ -246,4 +246,23 @@
     &>div {
         margin-bottom: 4px;
     }
+}
+
+.adContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
+
+    @media only screen and (max-width: 850px) {
+        display: none;
+    }
+}
+
+.pageScroller {
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
