--- a/src/views/AuctionHouse/auctionHouse.module.scss
+++ b/src/views/AuctionHouse/auctionHouse.module.scss
@@ -123,6 +123,10 @@
     align-items: center;
     width: 20%;
     margin-bottom: 20px;
+
+    @media (max-width: 768px) {
+        width: 100%;
+    }
 }
 
 .noAuctionsImage {
