--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -346,6 +346,19 @@
     overflow: hidden;
 }
 
+.openModalBackground {
+    width: 100%;
+    height: 100%;
+    filter: brightness(0.4) blur(12px);
+    transform: scale(1.2);
+
+    &>img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 .openPackContainer {
     position: absolute;
     top: 50%;
@@ -356,6 +369,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
+    filter: drop-shadow(0 0 20px #000);
 
     &[data-opening="true"] {
         animation: packDrop .2s linear .4s forwards;
@@ -465,6 +479,7 @@
     user-select: none;
     box-shadow: 0 0 4px #00000026;
     background-color: var(--background-color);
+    filter: drop-shadow(0 0 5px #000);
 
     @media only screen and (max-width: 650px) {
         width: 300px;
@@ -706,7 +721,7 @@
     user-select: none;
     opacity: .2;
     transform: rotate(-35deg);
-    z-index: -1;
+    z-index: 0;
 
     @media only screen and (max-width: 650px) {
         width: 200px;
