--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -654,7 +654,6 @@
     justify-content: space-between;
     gap: 2vh;
     height: 100%;
-    background-color: var(--primary-color);
     border-radius: 0.5vh;
 }
 
@@ -662,6 +661,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: var(--primary-color);
+    padding: 0 0 2vh 0;
+    border-radius: 0.5vh;
 
     &>p {
         font-size: 4vh;
@@ -677,19 +679,16 @@
     }
 }
 
-.friendsDivider {
-    width: 100%;
-    height: 1vh;
-    background-color: var(--secondary-color);
-}
-
 .holdFriends {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     height: 100%;
-    margin: 1vh;
     font-size: 1.5vh;
+    background: var(--primary-color);
+    padding: 1vh;
+    border-radius: 0.5vh;
 }
 
 .blook {
