add preloader to index.html, update background styles, and refactor input button layout in chat components

--- a/src/all.scss
+++ b/src/all.scss
@@ -51,6 +51,7 @@
 }
 
 body {
+    background-color: var(--background-color);
     color: var(--accent-color);
     font-family: "Nunito", sans-serif;
     margin: 0;
